solc_mutator_ossfuzz_seed_corpus/test_solidity/test_fa6dfd19abce2a1bfd3c72ce7cae35504d9ff4381408d28f6606d3b19cc3b9b2_0d05931d7873a072ec45f9c23ad9c8fd00d9d5af_sol.sol
==== Source:  ====

==== Source: su0.sol ====
error er0();
address constant cons0 = 0x0000000000000000000000000000000000000000;
pragma solidity >= 0.0.0;
contract C0 {
  bytes13   s0;
  int128 immutable public s1 = int128(170141183460469231731687303715884105727);
  bytes   s2 = "6633621c0c664e498f5881358517c6cbdb6ae2";
  constructor(bytes13 i0) payable  {
    s0 = i0;
    {
      revert er0();
    }
  }
  error er1();
  modifier m0(bool i0) virtual
  {
    _;
  }
  function f0(uint88[1] calldata i0,bool i1) external    returns(bool o0)
  {
  }
  modifier m1(uint192 i0) virtual
  {
    if (((!(false)) && (!((false && false)))))
    {
      delete s0;
      _;
    }
    if ((((uint144(0) >> uint144(((uint144(22300745198530623141535718272648361505980415) - uint144(18233778280062563702060291340081642984410719)) & uint144(22300745198530623141535718272648361505980415)))) * uint144(22300745198530623141535718272648361505980415)) < uint144(22300745198530623141535718272648361505980415)))
    {
      _;
    }
  }
  event ev0(int208  ep0, string indexed ep1);
  receive() external   payable
  {
    function (int24, bool) external   l0;
  }
  struct St0 {
    mapping(address => uint216) el0;
    bytes17 el1;
  }
  int152 public constant cons1 = (int152((((((int152(-1986545398317814959704551628585408935785841469) + int152(0)) + int152(2854495385411919762116571938898990272765493247)) ^ int152(923698830858821096994730151055889371163478832)) ^ int152(290115496546744087338184016620467350633062396)) / int152(2497242730876295357389849271421811386776904661))) + int152(-2472446328058326652459816425291741473739806238));
  function f2(string calldata i0,address i1) public  m0(false) payable
  {
    revert er0();
  }
  function f3(bool i0) external virtual m0(false) payable returns(address payable o0)
  {
    if ((true || true))
    {
    }
    return (payable(address(this)));
    (s2) = ("ffffffffffffffffffff00");
    unchecked {
      revert er0();
      s2.pop();
    }
  }
  type T0 is bool;
}
// ----
// Warning 5740: (su0.sol:1842-1934): Unreachable code.
// Warning 2072: (su0.sol:1057-1093): Unused local variable.
// Warning 5667: (su0.sol:1592-1610): Unused function parameter. Remove or comment out the variable name to silence this warning.
// Warning 5667: (su0.sol:1611-1621): Unused function parameter. Remove or comment out the variable name to silence this warning.
// Warning 5667: (su0.sol:1689-1696): Unused function parameter. Remove or comment out the variable name to silence this warning.
// CodeGenerationError 1284: Some immutables were read from but never assigned, possibly because of optimization.
